--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                 <h2 class="section-title">Our Location</h2>
                 <div class="map-container">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2920.8775411861!2d-89.0214!3d42.9812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDU4JzUyLjMiTiA4OcKwMDEnMTcuMCJX!5e0!3m2!1sen!2sus!4v1617304457752!5m2!1sen!2sus" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2920.8775411861!2d-89.01116494776213!3d43.046366466032765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDPCsDAyJzQ2LjkiTiA4OcKwMDAnNDAuMiJX!5e0!3m2!1sen!2sus!4v1617304457752!5m2!1sen!2sus" 
                         width="100%" 
                         height="100%" 
                         style="border: 0;" 
@@ -158,6 +158,7 @@
                         loading="lazy"
                         title="London LockUp Location"
                     ></iframe>
+
                 </div>
             </div>
         </section>
